[package]
# TODO(1) fix `authors` and `name` if you didn't use `cargo-generate`
name = "sputnik"
edition = "2024"
version = "0.1.0"


# To run all the tests via `cargo test` the tests need to be explicitly disabled for the binary targets
# If you use a standard main.rs file the following is sufficient:
# [[bin]]
# name = "sat-fsw"
# test = false

# [lib]
# harness = false

# needed for each integration test
# [[test]]
# name = "integration"
# harness = false

[dependencies]
embassy-stm32 = { version = "0.6.0", features = [ "defmt", "stm32f103c8", "unstable-pac", "memory-x", "time-driver-any", "exti" ]  }
embassy-executor = { version = "0.10.0", features = ["platform-cortex-m", "executor-thread", "defmt"] }
embassy-time = { version = "0.5.1", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }

defmt = "1.0.1"
defmt-rtt = "1.0.0"

cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
embedded-hal = "0.2.6"
embedded-hal-bus = { version = "0.3.0", features = ["defmt-03", "async"] }
panic-probe = { version = "1.0.0", features = ["print-defmt"] }

# LORA
lora-phy = { version = "3.0.1", features = ["lorawan-radio"] }
lorawan-device = { version = "0.12.2", features = ["defmt"] }
rand_chacha = { version = "0.10.0", default-features = false }
rand_core = "0.10.1"

[dev-dependencies]
defmt-test = "0.3"

[[example]]
name = "lora_send"
path = "examples/lora_send.rs"

[[example]]
name = "lora_receive"
path = "examples/lora_receive.rs"
