[package]
name = "sputnik"
edition = "2024"
version = "0.1.0"

[dependencies]
embassy-stm32 = { version = "0.6.0", features = [ "defmt", "stm32f103c8", "unstable-pac", "memory-x", "time-driver-any", "exti" ] }
embassy-executor = { version = "0.10.0", features = ["platform-cortex-m", "executor-thread", "defmt"] }
embassy-time = { version = "0.5.1", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }

defmt = "1.0.1"
defmt-rtt = "1.0.0"
panic-probe = { version = "1.0.0", features = ["print-rtt"] }

cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
embedded-hal = "0.2.6"
embedded-hal-bus = { version = "0.3.0", features = ["defmt-03", "async"] }

lora-phy = { version = "3.0.1", features = ["lorawan-radio"] }
lorawan-device = { version = "0.12.2", features = ["defmt"] }
rand_chacha = { version = "0.10.0", default-features = false }
rand_core = "0.10.1"

[dev-dependencies]
defmt-test = "0.3"

[[bin]]
name = "sputnik"
path = "src/bin/sputnik.rs"
test = false
bench = false

[[bin]]
name = "ground"
path = "src/bin/ground.rs"
test = false
bench = false
